# AgentScan

./: .gitignore  .pre-commit-config.yaml  AGENTSCAN_IDE_CONTEXT.md  LEARNING_SO_FAR.md  main.py  pyproject.toml
.github/workflows/: ci.yml
.obsidian/: graph.json  workspace.json
agentscan/: cli.py
agentscan/attacks/: base.py  registry.py
agentscan/attacks/payloads/: prompt_injection.yaml
agentscan/attacks/scan/: prompt_injection.py
agentscan/core/: client.py  models.py  runner.py  scorer.py
agentscan/identity/: credential_auditor.py  identity_scorer.py  manifest_loader.py  models.py  orchestrator.py  permission_mapper.py
agentscan/identity/policies/: roles.yaml
agentscan/supply_chain/: __init__.py  config_auditor.py  dep_scanner.py  known_typosquats.yaml  known_vulnerabilities.yaml  mcp_auditor.py  secret_scanner.py  typosquat_detector.py
tests/: conftest.py  test_base.py  test_cli.py  test_client.py  test_models.py  test_runner.py  test_scorer.py
tests/fixtures/demo-agents/: billing_agent.agent.json  insights_agent.agent.json  support_agent.agent.json
tests/fixtures/supply_chain/: clean_config.py  clean_requirements.txt  insecure_config.py  mcp_clean.mcp.json  mcp_no_auth.mcp.json  no_secrets.py  requirements.txt  secrets_present.py
tests/test_attacks/: test_prompt_injection.py
tests/test_identity/: test_identity.py
tests/test_supply_chain/: __init__.py  test_config_auditor.py  test_dep_scanner.py  test_mcp_auditor.py  test_secret_scanner.py  test_typosquat_detector.py
