[project]
name = "agentscan"
version = "0.1.0"
description = "Open-source security scanner for AI agents — red-teaming, exploit engine, AI dependency scanner"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "typer[all]>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "loguru>=0.7",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.9",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
